name:                tom
version:             0.1.0.0
synopsis:            A tool for reminders
description:         A tool for reminders
homepage:            https://github.com/aelve/tom
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/tom.git

executable tom
  main-is:             Main.hs
  other-modules:       Tom.Reminders
                       Tom.When
                       Tom.Daemon
                       Tom.GUI
                       Tom.Utils
  -- other-extensions:    
  build-depends:       aeson                    >= 0.8
                     , aeson-pretty             >= 0.7
                     , base                     >= 4.7 && < 4.9
                     , base-prelude             == 0.1.*
                     , bytestring               >= 0.10.4
                     , containers               >= 0.5.5
                     , deepseq                  >= 1.3
                     , directory                >= 1.2
                     , filelock                 >= 0.1
                     , filepath                 >= 1.3
                     , gtk3                     >= 0.13
                     , microlens-platform       >= 0.1.1
                     , mtl                      >= 2
                     , megaparsec               == 4.2.*
                     , random                   >= 1
                     , text
                     , time                     >= 1.4
                     , transformers             >= 0.3
                     , tz                       >= 0.1.0.1 && < 0.2
                     , uuid                     >= 1.3
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
