name:                tom
version:             0.1.0.0
synopsis:            A tool for reminders
description:         A tool for reminders
homepage:            https://github.com/aelve/tom
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/tom.git

library
  exposed-modules:     Tom.Reminders
                       Tom.When
                       Tom.Utils
                       Tom.RPC
  build-depends:       acid-state               == 0.14.*
                     , base                     >= 4.7 && < 4.9
                     , base-prelude             >= 0.1.21 && < 0.2
                     , binary                   >= 0.7.5.0
                     , binary-conduit           >= 1.2.3
                     , binary-orphans           >= 0.1.4.0
                     , bytestring               >= 0.10.4
                     , conduit                  >= 1.2.6
                     , conduit-extra            >= 1.1.9
                     , containers               >= 0.5.5
                     , directory                >= 1.2
                     , filepath                 >= 1.3
                     , gtk3                     >= 0.13
                     , leapseconds-announced
                     , megaparsec               == 4.2.*
                     , microlens-platform       >= 0.1.1
                     , mtl                      >= 2
                     , safecopy                 == 0.9.*
                     , text                     >= 1.2.2.0 && < 1.3
                     , time                     >= 1.4
                     , tz                       >= 0.1.0.1 && < 0.2
                     , uuid                     >= 1.3
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable tom
  main-is:             Main.hs
  build-depends:       base                     >= 4.7 && < 4.9
                     , base-prelude             >= 0.1.21 && < 0.2
                     , containers               >= 0.5.5
                     , gtk3                     >= 0.13
                     , megaparsec               == 4.2.*
                     , microlens-platform       >= 0.1.1
                     , text                     >= 1.2.2.0 && < 1.3
                     , time                     >= 1.4
                     , tom
                     , transformers             >= 0.3
  ghc-options:         -Wall -fno-warn-unused-do-bind
                       -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tom-daemon
  main-is:             Daemon.hs
  build-depends:       acid-state               == 0.14.*
                     , base                     >= 4.7 && < 4.9
                     , base-prelude             >= 0.1.21 && < 0.2
                     , containers               >= 0.5.5
                     , gtk3                     >= 0.13
                     , microlens-platform       >= 0.1.1
                     , random                   >= 1
                     , text                     >= 1.2.2.0 && < 1.3
                     , time                     >= 1.4
                     , tom
                     , transformers             >= 0.3
                     , uuid                     >= 1.3
  ghc-options:         -Wall -fno-warn-unused-do-bind
                       -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010
