name:                tom
version:             0.1.0.0
synopsis:            A tool for reminders
description:         A tool for reminders
homepage:            https://github.com/aelve/tom
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/tom.git

library
  exposed-modules:     Tom.Reminders
                       Tom.When
                       Tom.Utils
                       Tom.RPC
  build-depends:       acid-state == 0.14.*
                     , base
                     , base-prelude
                     , binary
                     , binary-conduit
                     , binary-orphans
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , leapseconds-announced
                     , megaparsec == 5.2.*
                     , microlens-platform
                     , mtl
                     , safecopy == 0.9.*
                     , text
                     , time
                     , tz == 0.1.*
                     , uuid
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable tom
  main-is:             Main.hs
  build-depends:       base
                     , base-prelude
                     , containers
                     , gtk3
                     , microlens-platform
                     , text
                     , time
                     , tom
                     , transformers
  ghc-options:         -Wall -fno-warn-unused-do-bind
                       -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tom-daemon
  main-is:             Daemon.hs
  build-depends:       acid-state
                     , base
                     , base-prelude
                     , containers
                     , gtk3
                     , microlens-platform
                     , random == 1.*
                     , text
                     , time
                     , tom
                     , transformers
                     , uuid
  ghc-options:         -Wall -fno-warn-unused-do-bind
                       -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , base-prelude
                     , hspec
                     , time
                     , tom
                     , tz
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
